# PiCloud

./: .env  .gitignore  README.md  docker-compose.yml  dockerfile  git_comand.sh  login.html  prometheus.yml  script.js  start_k8s_pods.sh  styles.css
API/: Dockerfile  app.go  go.mod
API/db/: connection.go
API/handlers/: download.go  file.go  file_delete.go  file_download.go  file_upload.go  node.go  node_status.go  user.go  user_create.go  user_files_get.go  user_get.go  user_login.go  users_get.go
API/helpers/: node_helper.go  (+3 more)
DB/: Dockerfile  Dockerfile-replica
NODE/: Dockerfile  main.go
NODES/: Dockerfile
WEB/: dockerfile
api_service/: Cargo.toml  Dockerfile  Dockerfile.migrations
api_service/migrations/00_create_tables/: up.sql
api_service/src/: main.rs
data_collector/: collector.go
db-init-scripts/: db-init.sql
doca/: Arquitetura Cloud Descentralizada.drawio
docker/: .gitignore  blackbox.yml  docker-compose.yml  prometheus.yml
docs/: duvidas.txt  fragmentation.md
firewall/: dockerfile  firewall.sh
k6-tester/: load_test.js
k8s/: start_k8s_pods.sh
k8s-deployment/: api-deployment.yaml  db-statefulset.yaml  grafana-deployment.yaml  load-test-job.yaml  nginx-configmap.yaml  nginx-deployment.yaml  node-deployment.yaml  postgres-secret.yaml  web-deployment.yaml
nginx/: Dockerfile  nginx.conf
nginx.conf/: nginx.conf  ngix.conf
node_service/: Cargo.toml  Dockerfile
rocket_server1/: Dockerfile
rocket_server2/: Dockerfile
rocket_server2/src/: Cargo.toml  main.rs
scripts/: 10_create_tables.sql  20_seed_data.sql  db-init.sql
(+254 files in other folders)
