[package]
name = "api_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-multipart = "0.4"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.10.1"
diesel = { version = "2.0.3", features = ["postgres", "r2d2"] }
jsonwebtoken = "8.1"
uuid = { version = "1.1", features = ["v4"] }
sha2 = "0.10"
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"
